--- a/.github/workflows/generate-data.yml
+++ b/.github/workflows/generate-data.yml
@@ -1,33 +1,33 @@
-name: Generate Data and Update Repository
+name: Update Data
 
 on:
   schedule:
-    - cron: '0 */3 * * *'  # Runs every 3 hours
+    - cron: "* * * * *"
 
 jobs:
-  build:
+  update-data:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'  # Use your desired Python version (e.g., '3.8', '3.9')
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.x  # Replace 'x' with the desired Python version
 
-    - name: Install Dependencies
-      run: pip install -r requirements.txt
+      - name: Install dependencies
+        run: pip install -r requirements.txt
 
-    - name: Execute Python Script
-      run: python src/main.py
+      - name: Run Python script
+        run: python src/main.py
 
-    - name: Commit and Push Changes
-      run: |
-        git config user.name "Xingjian508"
-        git config user.email "xingjiw4@uci.edu"
-        git add .
-        git commit -m "Update data JSON"
-        git push
+      - name: Commit and push changes
+        run: |
+          git config --global user.name "Your Name"
+          git config --global user.email "youremail@example.com"
+          git add .
+          git commit -m "Update data"
+          git push
 
