--- a/.github/workflows/generate-data.yml
+++ b/.github/workflows/generate-data.yml
@@ -18,10 +18,10 @@ jobs:
           python-version: 3.x  # Replace 'x' with the desired Python version
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r pysrc/requirements.txt  # Adjust the path to your requirements.txt file
 
       - name: Run Python script
-        run: python src/main.py
+        run: python pysrc/main.py  # Adjust the path to your main.py file
 
       - name: Commit and push changes
         run: |
