--- a/.github/workflows/generate-data.yml
+++ b/.github/workflows/generate-data.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          git config --global user.name "Your Name"
-          git config --global user.email "youremail@example.com"
+          git config --global user.name "Xingjian508"
+          git config --global user.email "xingjiw4@uci.edu"
           git add .
           git commit -m "Update data"
           git push
