--- a/.github/workflows/generate-data.yml
+++ b/.github/workflows/generate-data.yml
@@ -2,32 +2,16 @@ name: Update Data
 
 on:
   schedule:
-    - cron: "* * * * *"
+    - cron: '*/1 * * * *'  # Runs every minute
 
 jobs:
   update-data:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Check Out Repository
         uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.x  # Replace 'x' with the desired Python version
-
-      - name: Install dependencies
-        run: pip install -r pysrc/requirements.txt  # Adjust the path to your requirements.txt file
-
-      - name: Run Python script
-        run: python pysrc/main.py  # Adjust the path to your main.py file
-
-      - name: Commit and push changes
-        run: |
-          git config --global user.name "Xingjian508"
-          git config --global user.email "xingjiw4@uci.edu"
-          git add .
-          git commit -m "Update data"
-          git push
+      - name: Run Python Script
+        run: python3 pysrc/main.py
 
