--- a/.github/workflows/generate-data.yml
+++ b/.github/workflows/generate-data.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          git config --global user.name "Xingjian508"
+          git config --global user.name "Xingjian Wang"
           git config --global user.email "xingjiw4@uci.edu"
           git add .
           git commit -m "Update Data"
