--- a/.github/workflows/generate-data.yml
+++ b/.github/workflows/generate-data.yml
@@ -12,6 +12,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Pulling data
+        run: git pull origin main
+
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
